# guardian

./: .gitignore  PROJECT_BLUEPRINT.md  README.md  docker-compose.yml
.github/workflows/: agent.yml  backend-ci.yml  frontend.yml  rust.yml
agent/: Cargo.toml  build.rs
agent/frontend/: ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  package-lock.json  package.json  server.crt  server.csr  server.key
agent/src/: main.rs
agent/src/core/: signature_config.rs  wechat.rs
backend/: Dockerfile  config.yaml  entrypoint.sh  go.mod  go.sum
backend/api/proto/: guardian.proto
backend/cmd/server/: main.go
backend/db/init/: 001_schema.sql
backend/db/migrations/: 000001_create_audit_users.down.sql  000001_create_audit_users.up.sql  000002_create_cases_and_case_agents.down.sql  000002_create_cases_and_case_agents.up.sql
backend/internal/config/: config.go
backend/internal/database/: agent.go  db.go  interface.go
backend/internal/handler/: auth.go  middleware.go  task.go  task_test.go  types.go  upload.go
backend/internal/service/: agent_service.go  agent_service_test.go  data_service.go
backend/pkg/grpc/api/guardian/pkg/grpc/api/: guardian.pb.go  guardian_grpc.pb.go
backend/pkg/httpx/: httpx.go
backend/pkg/logger/: logger.go
backend/pkg/metrics/: metrics.go
frontend/src/: App.tsx  Login.tsx
frontend/src/api/: axiosConfig.js  client.ts  guardianApi.js
frontend/src/components/: VirtualizedMessageList.tsx
frontend/src/store/: appStore.ts
